# ingest

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ingest.cc
cmake/: FindProtobuf.cmake  FindgRPC.cmake
protos/: contract.proto
src/: docker-compose.yml
src/main/cpp/: CMakeLists.txt  Dockerfile  ingest.cc  main.cc
src/main/cpp/cmake/: FindProtobuf.cmake  FindgRPC.cmake
src/main/cpp/protos/: contract.proto
src/test/go/: Dockerfile
src/test/go/src/: main.go
src/test/go/src/contract/: contract.proto
